// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Blog Card Component > renders correctly with column direction, category, title  1`] = `
<div>
  <article
    class="blog-card blog-card--column"
    data-testid="blogCardTestId"
  >
    <img
      alt="Blog_Card_Image"
      class="blog-card__image"
    />
    <div
      class="blog-card__content"
    >
      <span
        class="category category--news"
        data-testid="categoryTestId"
      >
        News
      </span>
      <a
        class="blog-card__title title-blog-card"
        data-discover="true"
        href="/card"
      >
        title
      </a>
    </div>
  </article>
</div>
`;

exports[`Blog Card Component > renders correctly with column direction, category, title has a description 1`] = `
<div>
  <article
    class="blog-card blog-card--column"
    data-testid="blogCardTestId"
  >
    <img
      alt="Blog_Card_Image"
      class="blog-card__image"
    />
    <div
      class="blog-card__content"
    >
      <span
        class="category category--news"
        data-testid="categoryTestId"
      >
        News
      </span>
      <a
        class="blog-card__title title-blog-card"
        data-discover="true"
        href="/card"
      >
        title
      </a>
      <p
        class="blog-card__description"
      >
        Description
      </p>
    </div>
  </article>
</div>
`;

exports[`Blog Card Component > renders correctly with row direction, category, title  1`] = `
<div>
  <article
    class="blog-card blog-card--row"
    data-testid="blogCardTestId"
  >
    <img
      alt="Blog_Card_Image"
      class="blog-card__image"
    />
    <div
      class="blog-card__content"
    >
      <span
        class="category category--news"
        data-testid="categoryTestId"
      >
        News
      </span>
      <a
        class="blog-card__title title-blog-card"
        data-discover="true"
        href="/card"
      >
        title
      </a>
    </div>
  </article>
</div>
`;

exports[`Blog Card Component > renders correctly with row direction, category, title has a description 1`] = `
<div>
  <article
    class="blog-card blog-card--row"
    data-testid="blogCardTestId"
  >
    <img
      alt="Blog_Card_Image"
      class="blog-card__image"
    />
    <div
      class="blog-card__content"
    >
      <span
        class="category category--news"
        data-testid="categoryTestId"
      >
        News
      </span>
      <a
        class="blog-card__title title-blog-card"
        data-discover="true"
        href="/card"
      >
        title
      </a>
      <p
        class="blog-card__description"
      >
        Description
      </p>
    </div>
  </article>
</div>
`;
